Add customer behaviour

--- a/src/main/webapp/resources/messages.properties
+++ b/src/main/webapp/resources/messages.properties
@@ -1,2 +1,3 @@
-loginId.exists= loginId exit in Database. Please chose an other
+loginId.exists= loginId exists in Database. Please chose an other
 missing.file= file is missing
+UserId.exists=userId exists in Database. Please chose an other
